--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.3",
     "rimraf": "^3.0.2",
+    "hygen": "^6.2.7",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
@@ -54,7 +55,8 @@
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src/"
+    "lint": "eslint ./src/",
+    "comp": "hygen create component"
   },
   "eslintConfig": {
     "extends": [
