--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -14,9 +14,11 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.5",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.7.0",
     "reactstrap": "^9.1.3",
     "rimraf": "^3.0.2",
     "web-vitals": "^2.1.4",
