--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -14,6 +14,7 @@
     "oidc-client": "^1.11.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
     "react-redux": "^8.0.5",
